--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -89,3 +89,17 @@ a {
 	color: black;
 	text-decoration: none;
 }
+span.tag {
+	font-size: 15px;
+}
+.top {
+	text-align: center;
+}
+.right {
+	text-align: right;
+	width: 100%;
+}
+.left {
+	text-align: left;
+	width: 100%;
+}
