--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -1,5 +1,5 @@
 
-<h1><%= @author.name %>
+<h1 class='top'><%= @author.name %>
 	<% if @author.bio.present? %>
 	<br>
 		<h3>
@@ -10,16 +10,25 @@
 		</p>
 		<br>
 	<% end %>
+</h1>
 <h3>
 	Thoughts:
 </h3>
 <ul>
 		<% @author.thoughts.each do |t| %>
 		  <li class="text">			
-			<%= link_to t.text, thought_path(t) %>
+			<%= link_to t.text, author_thought_path(t.author_id, t.id) %>
 		  </li>	
 		<% end %>
 		<% if @author.thoughts.count.zero? %>
 			This Author is Not Thinking
 		<% end %>
 </ul>
+<div>
+	<% if current_author == @author %>
+		<span class='left'><%= link_to 'Update Account', @author, method: :put %></span>
+		<span class='right'><%= link_to 'Delete Account*', @author, method: :delete %></span>
+	<% end %>
+	<p>*Can't get these links to spread to edges*</p>
+</div>
+<h1>^Links use Author.last when not signed in</h1>
