--- a/app/views/layouts/_header.erb
+++ b/app/views/layouts/_header.erb
@@ -2,13 +2,21 @@
   <ul>
   	<li class="logo">
   		<h2>
-  			<%= link_to "Dear", @thought_path %>
-  			<%= link_to "Diary", @author_path %>
+        <% if current_author %>
+  			 <%= link_to "Dear", new_author_thought_path(current_author) %><%= link_to "Diary", author_path(current_author) %>
+        <% else %>
+          DearDiary
+        <% end %>
   		</h2>
   	</li>
   	<li><%= link_to "All Authors", authors_path %></li>
   	<li><%= link_to "All Thoughts", thoughts_path %></li>
-	<li>Sign In</li>
-	<li>New Thought</li>
+    <% if current_author %>
+      <li><%= link_to 'New Thought', new_author_thought_path(current_author) %></li>
+      <li><%= link_to 'Sign Out', sessions_path, method: :delete %></li>
+    <% else %>
+      <li><%= link_to 'Sign In', new_author_path %></li>
+      <li><%= link_to 'Sign Up', new_author_path %></li>
+    <% end %>
   </ul>
 </div>
