--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -1,3 +1,6 @@
+<% if flash[:notice] %>
+		<h2 class="top"><%= flash[:notice] %></h2>
+<% end %>
 <h3>All Authors</h3>
 <ul>
 	<% @authors.each do |author| %>
