--- a/app/views/authors/new.html.erb
+++ b/app/views/authors/new.html.erb
@@ -1,24 +1,31 @@
-<h3 class="ekfbkfv">
-	<div>
-	Sign Up
-		<br><br><%= form_for(Author.new) do |f| %>
-			<%= f.label :name %><br />
-			<%= f.text_field :name %><br /><br>
-			<%= f.label :password %><br />
-			<%= f.password_field :password %><br><br>
-			<%= f.label :bio %><br />
-			<%= f.text_area :bio %><br /><br>
-			<%= f.submit "Sign Up" %>
-		<% end %>
-	</div>
-	<div>
-	Sign In
-		<br><br><%= form_for(Author.new, url: sessions_path) do |f| %>
-			<%= f.label :name %><br />
-			<%= f.text_field :name %><br /><br>
-			<%= f.label :password %><br />
-			<%= f.password_field :password %><br /><br>
-			<%= f.submit "Sign In" %>
-		<% end %>
-	</div>
-</h3>
+<% if flash[:notice] %>
+	<h3 class="top"><%= flash[:notice] %></h3>
+<% end %>
+<div class="spread">
+	<span>
+	<h3>Sign Up</h3>
+		<div class="left-quarter">
+			<br><br><%= form_for(Author.new) do |f| %>
+				<%= f.label :name %>
+				<%= f.text_field :name %><br /><br>
+				<%= f.label :password %>
+				<%= f.password_field :password %><br><br>
+				<%= f.label :bio %><br />
+				<%= f.text_area :bio %><br /><br>
+				<%= f.submit "Get Published" %>
+			<% end %>
+		</div>
+	</span>
+	<span>
+	<h3>Sign In</h3>
+		<div class="left-quarter">
+			<br><br><%= form_for(Author.new, url: sessions_path) do |f| %>
+				<%= f.label :name %>
+				<%= f.text_field :name %><br /><br>
+				<%= f.label :password %>
+				<%= f.password_field :password %><br /><br>
+				<%= f.submit "Sign In" %>
+			<% end %>
+		</div>
+	</span>
+</div>
