--- a/app/views/layouts/_header.erb
+++ b/app/views/layouts/_header.erb
@@ -13,7 +13,7 @@
   	<li><%= link_to "All Thoughts", thoughts_path %></li>
     <% if current_author %>
       <li><%= link_to 'New Thought', new_author_thought_path(current_author) %></li>
-      <li><%= link_to 'Sign Out', sessions_path, method: :delete %></li>
+      <li><%= link_to 'Sincerely (Sign Out)', sessions_path, method: :delete %></li>
     <% else %>
       <li><%= link_to 'Sign In', new_author_path %></li>
       <li><%= link_to 'Sign Up', new_author_path %></li>
