--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -37,6 +37,13 @@ html, body {
 	padding: 15px;
 }
 
+.alert {
+	font-family: 'Pacifico';
+	text-align: center;
+	padding: 5 px;
+	color: #6666CC;
+}
+
 ul {
 	list-style: none;
 	width: 100%;
@@ -55,9 +62,16 @@ table, th, td {
 		max-width: 800px;
 		margin: 0 auto;
 	}
+	&.after-thoughts {
+		max-width: 800px;
+		margin: 0 auto;
+	}
 }
 th {
 	padding: 15px;
+}
+tr:last-child {
+	border-bottom: 2px;
 }
 td {
 	padding: 15px;
@@ -119,8 +133,13 @@ a {
 span.tag {
 	font-size: 15px;
 }
+.time {
+	text-align: center;
+	font-size: 15px;
+}
 .top {
 	text-align: center;
+	padding: 0px;
 }
 .spread {
 	font-size: 0;
@@ -140,4 +159,7 @@ span.tag {
 	width: 25%;
 }
 .show-more {
+}
+.hidden {
+	display: none;
 }
