--- a/app/views/authors/edit.html.erb
+++ b/app/views/authors/edit.html.erb
@@ -1,10 +1,19 @@
 <h1>Edit Author</h1>
+<% if flash[:notice] %>
+	<h3 class="top"><%= flash[:notice] %></h3>
+<% end %>
 <p>
 <%= form_for(@author) do |f| %>
+	<% if @author.email.blank? %>
+		<%= f.label :email, "Add Email" %><br>
+		<%= f.email_field :email %><br><br>
+	<% end %>
 	<%= f.label :name %><br />
 	<%= f.text_field :name %><br /><br>
 	<%= f.label :password %><br />
 	<%= f.password_field :password %><br><br>
+	<%= f.label :password, "Confirm Password" %><br>
+	<%= f.password_field :password_confirmation %><br><br>
 	<%= f.label :bio %><br />
 	<%= f.text_area :bio %><br /><br>
 	<%= f.submit "Redefine Yourself" %>
