--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -1,5 +1,5 @@
 <% if flash[:notice] %>
-		<h2 class="top"><%= flash[:notice] %></h2>
+		<h2 class="alert"><%= flash[:notice] %></h2>
 <% end %>
 <h3>All Authors</h3>
 <ul>
